유저 정보에 이미지 필드 추가